Updated Solr to 10.0 (WIP with failing test cases)